Fix page transitions overflowing

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,7 +3,7 @@
     src: url('../assets/fonts/Ubuntu-Bold.ttf');
 }
 
-.root-page {
+.root-view {
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -11,12 +11,16 @@
     justify-content: center;
     overflow: hidden;
 }
-.page {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
+.view {
+    width: 100%;
+    height: 100%;
     overflow: hidden;
     box-shadow: 0 4px 3em rgb(0 0 0 / 60%);
+}
+.page {
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 .page-content {
     max-width: 1280px;
